# mcp-story-service

./: .env.dev.example  .env.prod.example  .ruff.toml  WARP.md  debug_redis.py  debug_tension.py  debug_test.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.gemini/commands/: implement.toml  tasks.toml
.github/: copilot-instructions.md
.kilocode/workflows/: clarify.md
.opencode/command/: clarify.md
.specify/memory/: constitution.md
config/genres/: action.yaml  animation.yaml  biographical.yaml  comedy.yaml  documentary.yaml  drama.yaml  fantasy.yaml  historical.yaml  horror.yaml  musical.yaml  mystery.yaml  romance.yaml  sci-fi.yaml  superhero.yaml  thriller.yaml  war.yaml  western.yaml
config/patterns/: character_arcs.yaml  hero-journey.yaml  heros_journey.yaml  pacing-templates.yaml  plot_devices.yaml  three-act.yaml  three_act_structure.yaml
docs/: how-to-use-mcp-story-service.md
docs/thoughts/: mcp-story-idea.md
specs/001-i-have-put/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-i-have-put/contracts/: story-analysis-tools.json
src/lib/: __init__.py  error_handler.py  genre_loader.py  integration_manager.py  process_utils.py  redis_client.py
src/mcp/: server.py
src/mcp/handlers/: __init__.py  consistency_handler.py  genre_patterns_handler.py  pacing_handler.py  plot_threads_handler.py  session_handler.py  story_structure_handler.py
src/mcp/tools/: __init__.py  tool_registry.py
src/models/: character_journey.py  consistency_rule.py  content_analysis.py  genre_template.py  narrative_beat.py  plot_thread.py  story_arc.py  story_session.py
src/services/: process_isolation.py  session_manager.py
src/services/consistency/: __init__.py  validator.py
src/services/genre/: __init__.py  analyzer.py
src/services/narrative/: __init__.py  analyzer.py
src/services/pacing/: calculator.py
tests/contract/: test_consistency_tool.py  test_genre_patterns_tool.py  test_pacing_tool.py  test_plot_threads_tool.py  test_session_tool.py  test_story_structure_tool.py
tests/integration/: test_concurrent_requests.py  test_consistency_scenario.py  test_genre_scenario.py  test_integration_failure_scenario.py  test_malformed_content_scenario.py  test_mcp_server_integration.py  test_plot_thread_scenario.py  test_session_isolation_scenario.py  test_story_structure_scenario.py
tests/performance/: test_concurrent_performance.py
tests/unit/: test_consistency_validator.py  test_genre_analyzer.py  test_narrative_analyzer.py  test_pacing_calculator.py  test_story_arc_model.py
tests/validation/: test_quickstart_scenarios.py
