[tool.poetry]
name = "mcp-story-service"
version = "0.1.0"
description = "Narrative intelligence MCP server for AI movie production"
authors = ["Your Name <you@example.com>"]
packages = [{include = "src", from = "."}]

[tool.poetry.dependencies]
python = "^3.11"
mcp = "*"
asyncio = "*"
redis = "*"
pyyaml = "*"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.poetry.group.dev.dependencies]
pytest = "^7.3"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
